--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section class="introduction">
             <h2>Introduction</h2>
-            <p>Hello, I'm Momina Eman, a freelance web developer specializing in front-end design and development. I create beautiful, user-friendly websites with modern technologies like HTML, CSS, and JavaScript.</p>
+            <p>Hello, I'm Momina Eman 221106 from BSIT-V-B, a freelance web developer specializing in front-end design and development. I create beautiful, user-friendly websites with modern technologies like HTML, CSS, and JavaScript.</p>
             
             <!-- Adding image in Introduction -->
             <img src="C:\Users\Muhammad shafiq\Downloads\girl-using-laptop-cartoon_1308-118583.jpg" class="intro-image">
